fixed warnings in NumberUtils class